--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-Testing
+<!DOCTYPE html>
+<html lang ="en-us">
+
+<!--character set, link to stylesheet and page title -->
+<head>
+    <meta charset ="UTF-8" /> 
+    <link rel= "stylesheet" href= "./assets/style.css">
+    <title>Austin Price</title>
+</head>
+
+    <body>
+        <header>
+            <h1>Austin Price</h1>
+            <ul>
+                <li> <a href="#aboutme"> About Me</a> </li>
+                <li> <a href="#projects">Projects</a> </li>
+                <li> <a href="#contact">Contact</a> </li>
+            </ul>
+        </header>
+
+        <section class="about-me"> 
+            
+            <div>
+                <h3>About Me</h3>
+                <p>
+                
+                </p>
+            </div>
+
+
+
+
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+    </body>
+</html>
