added about me section, contact section and added background picture

--- a/index.html
+++ b/index.html
@@ -9,40 +9,42 @@
 </head>
 
     <body>
+        <!--header section-->
         <header>
             <h1>Austin Price</h1>
             <ul>
-                <li> <a href="#aboutme"> About Me</a> </li>
+                <li> <a href="#about"> About Me</a> </li>
                 <li> <a href="#projects">Projects</a> </li>
                 <li> <a href="#contact">Contact</a> </li>
             </ul>
         </header>
 
+        <!--about me section-->
         <section class="about-me"> 
-            
-            <div>
+            <div id="aboutme">
                 <h3>About Me</h3>
                 <p>
-                
+                    Welcome to my portfolio! Currently I am enrolled in a full stack web development bootcamp through the University of Wisconsin Madison Extended Campus. I am excited to start my career in web development and am looking forward to learning about back-end technology. 
+                    I graduated from UW-Whitewater in 2016 with my BBA in Information Technology and after graduating completed contract work as a Business Analyst and Quality Assurance Analyst. I am now a Buyer at a small computer manufacturer in the Twin Cities area but am looking forward 
+                    to my new career path as a developer. My hobbies include golf, snowboarding, weightlifting and (when I buy another bike) riding motorcycles!
                 </p>
             </div>
+        </section>
 
-
-
-
-
+        <section class="projects-grid" id="projects">
 
         </section>
 
 
-
-
-
-
-
-
-
-
+        <section class="contact-info">
+            <div id="contact">
+                <h3>Contact Information</h3>
+                <p>
+                    P: 920.253.6662 <br>
+                    E: aaprice2@gmail.com
+                </p>
+            </div>
+        </section>
 
 
     </body>
