added css to the header, added hero and image

--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
     <body>
         <!--header section-->
         <header>
-            <h1>Austin Price</h1>
-            <ul>
-                <li> <a href="#about"> About Me</a> </li>
-                <li> <a href="#projects">Projects</a> </li>
-                <li> <a href="#contact">Contact</a> </li>
-            </ul>
+            <div>
+                <h1>Austin Price</h1>
+                <ul>
+                    <li> <a href="#about"> About Me</a> </li>
+                    <li> <a href="#projects">Projects</a> </li>
+                    <li> <a href="#contact">Contact</a> </li>
+                </ul>
+            </div>
         </header>
+
+        <div class="hero">
+            <img src="./assets/pictures/background.jpg" alt="Lake Superior - Duluth, MN">
+        </div>
 
         <!--about me section-->
         <section class="about-me"> 
@@ -31,11 +37,12 @@
             </div>
         </section>
 
+        <!--project grid section-->
         <section class="projects-grid" id="projects">
 
         </section>
 
-
+        <!--contact info section-->
         <section class="contact-info">
             <div id="contact">
                 <h3>Contact Information</h3>
