i am not a fan of css

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
 
         <!--about me section-->
-        <section class="about-me"> 
-            <div id="aboutme">
+        <section class="about-me" id="aboutme"> 
+            <div>
                 <h3>About Me</h3>
                 <p>
                     Welcome to my portfolio! Currently I am enrolled in a full stack web development bootcamp through the University of Wisconsin Madison Extended Campus. I am excited to start my career in web development and am looking forward to learning about back-end technology. 
@@ -43,8 +43,8 @@
         </section>
 
         <!--contact info section-->
-        <section class="contact-info">
-            <div id="contact">
+        <section class="contact-info"id="contact">
+            <div>
                 <h3>Contact Information</h3>
                 <p>
                     P: 920.253.6662 <br>
