added some css to body

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         </div>
 
         <!--about me section-->
-        <section class="about-me" id="aboutme"> 
-            <div>
+        <section class="about-me" id="about"> 
+            <div class= "section-title">
                 <h3>About Me</h3>
+            </div>
                 <p>
                     Welcome to my portfolio! Currently I am enrolled in a full stack web development bootcamp through the University of Wisconsin Madison Extended Campus. I am excited to start my career in web development and am looking forward to learning about back-end technology. 
                     I graduated from UW-Whitewater in 2016 with my BBA in Information Technology and after graduating completed contract work as a Business Analyst and Quality Assurance Analyst. I am now a Buyer at a small computer manufacturer in the Twin Cities area but am looking forward 
@@ -42,17 +43,18 @@
 
         </section>
 
-        <!--contact info section-->
-        <section class="contact-info"id="contact">
-            <div>
+        
+        <!--footer-->
+        <footer class="contact-info" id="contact">
+            <div class= "section-title">
                 <h3>Contact Information</h3>
-                <p>
-                    P: 920.253.6662 <br>
-                    E: aaprice2@gmail.com
-                </p>
             </div>
-        </section>
-
+            <p>
+                P: 920.253.6662 <br>
+                E: aaprice2@gmail.com <br>
+                <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="austinaprice"><a class="LI-simple-link" href='https://www.linkedin.com/in/austinaprice?trk=profile-badge'>LinkedIn</a></div>
+            </p>
+        </footer>
 
     </body>
 </html>
