added project grid

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="about-me" id="about"> 
             <img src="./assets/pictures/me.jpg" alt="Picture of myself - Austin">
             <img src="./assets/pictures/golfing.jpg" alt="Balancing my driver on my nose while golfing">
-            
+
             <div class="section-style">
                 <div class= "section-title">
                     <h3>About Me</h3>
@@ -43,6 +43,31 @@
         <section class="projects-grid section-style" id="projects">
             <div class="section-title">
                 <h3>My Projects</h3>
+            </div>
+
+            <div class="project-wrapper">
+                <div class="project-grid-container">
+                    <div class="project-grid-item">
+                        Run-Buddy
+                    </div>
+
+                    <div class="project-grid-item">
+                        Challenge 1 - Code refactor
+                    </div>
+
+                    <div class="project-grid-item">
+                        Coming soon!
+                    </div>
+
+                    <div class="project-grid-item">
+                        Coming soon!
+                    </div>
+                    
+                    <div class="project-grid-item">
+                        Coming soon!
+                    </div>
+
+                </div>
             </div>
 
         </section>
