updating project grid-not finished

--- a/index.html
+++ b/index.html
@@ -49,29 +49,25 @@
 
             <div class="project-wrapper">
                 <div class="project-grid-container">
-                    <div class="project-grid-item">
-                        Coming soon!
-                    </div>
-
-                    <div class="project-grid-item">
-                        Challenge 1 - Code refactor
+                    <div class="grid-item" id="item1">
+                        Code refactor
                         <a href="https://frostyausty.github.io/Challenge-1-CodeRefactor/">
                         <img src="./assets/pictures/challenge1.jpg" alt="horiseon home page">                            
                         </a>
                     </div>
 
-                    <div class="project-grid-item first-project">
+                    <div class="grid-item" id="item2">
                         Run Buddy
                         <a href="https://frostyausty.github.io/run-buddy/"> 
                         <img src="./assets/pictures/runbuddyproject.jpg" alt="run buddy front page">                            
                         </a>
                     </div>
 
-                    <div class="project-grid-item">
-                        Coming soon!
+                    <div class="grid-item" id="item3">
+                        OneStopJob
                     </div>
 
-                    <div class="project-grid-item">
+                    <div class="grid-item">
                         Coming soon!
                     </div>
 
