added onestopjob to my portfolio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!--about me section-->
         <section class="about-me" id="about"> 
-            <img src="./assets/pictures/me.jpg" alt="Picture of myself - Austin">
+            <img src="./assets/pictures/golfing.jpg" alt="Picture of myself - Austin">
             
 
             <div class="section-style">
@@ -50,20 +50,23 @@
             <div class="project-wrapper">
                 <div class="project-grid-container">
                     <div class="project-grid-item">
-                        Coming soon!
+                        Run Buddy
+                        <a href="https://frostyausty.github.io/run-buddy/"> 
+                        <img src="./assets/pictures/runbuddyproject.jpg" alt="run buddy front page">                            
+                        </a>
                     </div>
 
                     <div class="project-grid-item">
-                        Challenge 1 - Code refactor
+                        Code Refactor
                         <a href="https://frostyausty.github.io/Challenge-1-CodeRefactor/">
                         <img src="./assets/pictures/challenge1.jpg" alt="horiseon home page">                            
                         </a>
                     </div>
 
                     <div class="project-grid-item first-project">
-                        Run Buddy
-                        <a href="https://frostyausty.github.io/run-buddy/"> 
-                        <img src="./assets/pictures/runbuddyproject.jpg" alt="run buddy front page">                            
+                        OneStopJob
+                        <a href="https://frostyausty.github.io/OneStopJob/"> 
+                        <img src="./assets/pictures/onestopjob.jpg" alt="OneStopJob homepage">                            
                         </a>
                     </div>
 
