updated project links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                     <div class="project-grid-item">
                         Code Refactor
-                        <a href="https://frostyausty.github.io/Challenge-1-CodeRefactor/">
+                        <a href="https://frostyausty.github.io/CodeRefactor/">
                         <img src="./assets/pictures/challenge1.jpg" alt="horiseon home page">                            
                         </a>
                     </div>
