updated project section with newest group project

--- a/index.html
+++ b/index.html
@@ -63,15 +63,18 @@
                         </a>
                     </div>
 
-                    <div class="project-grid-item first-project">
-                        OneStopJob
-                        <a href="https://frostyausty.github.io/OneStopJob/"> 
-                        <img src="./assets/pictures/onestopjob.jpg" alt="OneStopJob homepage">                            
+                    <div class="project-grid-item latest-project">
+                        24-Chains: Disc golf social site
+                        <a href="https://github.com/MarynaPR/24-chains"> 
+                        <img src="./assets/pictures/24chainsproject2.JPG" alt="24-Chains homepage">                            
                         </a>
                     </div>
 
                     <div class="project-grid-item">
-                        Coming soon!
+                        OneStopJob
+                        <a href="https://frostyausty.github.io/OneStopJob/"> 
+                        <img src="./assets/pictures/onestopjob.jpg" alt="OneStopJob homepage">                            
+                        </a>
                     </div>
 
                     <div class="project-grid-item">
